# Genretive-AI

./: README.md  Requirements.txt  pyproject.toml
Langchain/Chat Model/ChatBot/: ChatBot.py  UIapp.py
Langchain/Embeddings Model/: ChatGPT.py  HuggingFace.py
Langchain/MyCompany_improved/: App.py  core.py
